--- a/左侧导航右侧内容/css/style.css
+++ b/左侧导航右侧内容/css/style.css
@@ -5,8 +5,8 @@ body{
 	background:#F8F8F8;
 	font-family:"宋体";
 }
-ul{
-	width:180px;
+.left-nav ul{
+	width:250px;
 	background:#fff;
 	position:relative;
 	z-index:0;
@@ -14,27 +14,27 @@ ul{
 	display: inline-block;
 	vertical-align: top;
 }
- ul li{
-	height:50px;
-	line-height:50px;
+.left-nav ul li{
+	height:70px;
+	line-height:70px;
 	text-align:center;
 	border-bottom:1px solid #F8F8F8;
 }	
-ul li a{
+.left-nav ul li a{
 	color:#666;
 	display:block;
 }	
-ul li a:hover{
+.left-nav ul li a:hover{
 	color:#99cc33;
 	text-decoration:none;
 }	
-ul li a.hover{
+.left-nav ul li a.hover{
 	color:#99cc33;
 }	
 #lanPos{
-	width:180px;
-	height:40px;
-	line-height:40px;
+	width:250px;
+	height:60px;
+	line-height:60px;
 	margin-top:5px;
 	border-left:5px solid #99cc33;
 	position:absolute;
@@ -49,8 +49,7 @@ ul li a.hover{
     background: #fff;
     border-radius: 5px;
 }
-.right-content{
-	display: inline-block;
-	width:960px;
-	height: 80vh;
+.my-tests-right{
+    margin-left:270px;
+    
 }
